--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "jest --runInBand"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -34,18 +33,6 @@
     "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
-    "@types/jest": "^29.5.2",
-    "@types/supertest": "^2.0.12",
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/src/tests/**/*.test.ts"
-    ]
+    "typescript": "^5.8.3"
   }
 }
